# dotenvplus

./: Makefile  README.md  pyproject.toml
dotenvplus/: __init__.py
examples/: .env.example  simple_example.py
tests/: test_usage.py
